--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Resume</title>
 
     <link rel="stylesheet" href="css/bootstrap-grid.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -30,7 +30,7 @@
                         ตั้งใจจะเป็น Fullstack Dev ให้ได้เลย
                     </p>
                 </div>
-                <div class="p-5 ">
+                <div class="p-5 text-left">
                     <ul class="icon-list">
                         <li>
                             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-phone-fill" viewBox="0 0 16 16">
