edit index and css

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <div class="d-grid gap-0">
                 <div class="p-5">
                     <h4 class="text-h-about">About Me</h4>
-                    <p class="text-about">
-                        ผทเรียนอยู่ที่ มหาวิทยาลัยพะเยา
+                    <p class="text-about text-left">
+                        ผ,เรียนอยู่ที่ มหาวิทยาลัยพะเยา
                         <br>
                         คณะเทคโนโลยีส่ระสนเทศและการสื่อสาร
                         <br>
