--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     
    <div class="row">
-    <div class="col-lg-4 bg-black text-white p-3">
+    <div class="col-lg-4 bg-black text-white p-3 mb-1">
         <div class="d-flex flex-column ">
             <div class="p-5">
                 <img src="image/1.png" alt="me" class="rounded-circle" width="200" height="200">
@@ -21,13 +21,18 @@
                 <div class="p-5">
                     <h4 class="text-h-about">About Me</h4>
                     <p class="text-about text-left">
-                        ผ,เรียนอยู่ที่ มหาวิทยาลัยพะเยา
+                        ผมเรียนอยู่ที่ มหาวิทยาลัยพะเยา
                         <br>
                         คณะเทคโนโลยีส่ระสนเทศและการสื่อสาร
                         <br>
                         สาขา วิทยาการคอมพิวเตอร์ ชั้นปีที่สอง
                         <br>
                         ตั้งใจจะเป็น Fullstack Dev ให้ได้เลย
+                        <br>
+                        ถึงตอนนี้จะยังไม่ต่อยรู้เรื่องแต่ก็
+                        <br>
+                        จะพยายาม
+                        ในสายงานนี้ให้ถึงที่สุด
                     </p>
                 </div>
                 <div class="p-5 text-left">
