--- a/index.html
+++ b/index.html
@@ -123,7 +123,18 @@
         <hr>
         <br>
         <div class="text-center">
-            <p>ทำเว็บสำหรับซื้อ-ขาย ของ โดยใช้ Python เป็น Backend ใช้ MySql เป็น Data-base ใช้ Docker เป็น Deploy</p>
+            <p>
+                ทำเว็บสำหรับซื้อ-ขาย ของ โดยใช้ 
+                <br>
+                Backend : Python
+                <br>
+                Framework : Django
+                <br>
+                Deployed : Docker
+                <br>
+                Databse : MySql
+
+            </p>
         </div>
         <br>
         <hr>
